Made the test page link to clippy.js instead of clippy.css

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="clippy.css" />
-		<script type="text/javascript" src="msoffice.js"></script>
+		<script type="text/javascript" src="clippy.js"></script>
 		
 		<style type="text/css">
 			#main {
