--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
 			}
 		</style>
 	</head>
-	<body onload="page_init();">
+	<body onload="clippy.init();">
 		<div id="main">
 			<h1>JS Clippy test page</h1>
 			<textarea id="clippyTextInput">Hello, and welcome to my study.  My name is Mitchell.  You're always welcome to enjoy the things that I've found.  I'm lonely, and I collect things.</textarea>
